CSS/style.css
/* ... */
.the_brands {
  flex: 3;
  justify-content: space-around;
  align-items: center;
}

.brands-title {
  flex: 1;
}

#our-process {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right bottom,
    var(--cc-bg-distinct-lighter),
    var(--cc-bg-primary-lighter)
  );
}

#our-process-details {
  justify-content: center;
  align-items: center;
}

.intro-details p {
  font-size: 1rem;
}

.data-container {
  max-width: 1200px;
  gap: 20px;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

#data-section {
  background-color: var(--cc-primary-bg);
}

#data-section h3,
#data-section h5 {
  color: var(--cc-white-sugar);
}

.data-tab {
  border-right: 1px solid var(--cc-grey-light);
  justify-content: center;
  align-items: center;
}

.data-info img {
  display: block;
  margin: 0 auto 15px;
}

.data-info h3 {
  font-size: 40px;
}

button.accordion-button {
  text-transform: capitalize;
}

/*  ************************************************************************************
  CONTACT
****************************************************************************************/

.card-deck .card {
  flex: 1;
}

.card {
  background-color: var(--cc-grey-lighter);
}

p.card-text {
  font-size: 1rem;
}

.card-body img {
  margin: 0 auto;
}

#form-message-success {
  display: none;
}

#contactForm input,
#contactForm textarea {
  background-color: var(--cc-grey-lighter);
}

#contactForm input.btn-primary {
  background-color: var(--cc-primary-bg);
  border-color: var(--cc-primary-bg);
}

#contactForm input.btn-primary:hover,
#pricing-section button.btn-primary:hover,
#contactForm input.btn-primary:active,
#pricing-section .button.btn-primary:active {
  background-color: var(--cc-bg-dark);
  border-color: var(--cc-dark);
}

/*  ************************************************************************************
  Pricing
****************************************************************************************/
#pricing-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right,
    var(--cc-white-sugar) 200px,
    var(--cc-bg-primary-lighter) 900px,
    var(--cc-white-sugar)
  );
}

.intro--pricing {
  flex: 5;
}

.billing-duration {
  flex: 1;
  justify-content: flex-end;
  align-items: flex-start;
  align-self: start;
  background-color: var(--cc-bg-primary-lighter);
  border-radius: 5px;
}

.billing-duration-indicators {
  background-color: var(--cc-bg-primary-lighter);
}

.btn.btn-secondary {
  background-color: var(--cc-bg-primary-lighter);
  color: var(--cc-dark);
  border-color: transparent;
  font-weight: bold;
}

.btn.btn-primary {
  background-color: var(--cc-primary-bg);
  border-color: transparent;
  font-weight: bold;
}

h1 .small,
small {
  font-size: 0.9em;
}

.pricing-tables .card,
.pricing-tables .card-header {
  background-color: var(--cc-white-sugar);
}

.pricing-tables .card-header {
  border-bottom: none;
}

.pricing-tables .card-body li {
  list-style-type: none;
  margin: 5px 0;
  display: flex;
  align-items: center;
}

.pricing-tables .card-body ul {
  text-align: left;
  margin-left: 15%;
}

.pricing-tables .card-body h1 {
  color: var(--cc-primary);
}

.list-group li img {
  flex: 1;
  max-width: 16px;
  max-height: 16px;
  width: 100%;
  height: 100%;
  margin-right: 10px;
}

.list-group li span {
  flex: 4;
}

.list-group span {
  text-transform: capitalize;
}

/*  ************************************************************************************
  Privacy
****************************************************************************************/

#privacy-section h4 {
  font-size: 1rem;
}

#privacy-section p {
  font-size: 1rem;
}

#privacy-section img {
  border: 2px solid var(--cc-bg-primary-lighter);
  border-radius: 5px;
  max-width: 1115px;
  width: 100%;
  margin: 0;
  padding: 0;
}

/*  ************************************************************************************
  Instructor profile
****************************************************************************************/
#instructor-profile {
  background-color: var(--cc-grey-lighter);
  border: 1px solid var(--cc-grey-lighter);
  border-radius: 5px;
  max-height: 800px;
}

#instructor-profile .instructor-thumbnail {
  max-width: 230px;
  max-height: 230px;
}

#instructor-profile .instructor-thumbnail img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
  margin-left: 28px;
}

#instructor-profile .read-more {
  max-width: 220px;
  margin-left: 28px;
}

#instructor-profile .social {
  width: 50%;
  margin-left: 65px;
  justify-content: space-between;
  align-items: center;
}

#instructor-profile .social img {
  max-width: 25px;
  max-height: 25px;
}

#instructor-profile .social a::after {
  background-color: transparent;
}

#instructor-profile .social a:hover {
  transform: scale(1.05);
}

.instructor {
  max-width: 900px;
}

.credentials {
  color: var(--cc-white-sugar);
  background-color: var(--cc-primary);
}

.credential {
  flex: 1;
  border-right: 1px solid var(--cc-white-sugar);
}

.credential:last-of-type {
  border-right: none;
}

.credential p {
  font-size: 1rem;
}

.credential h4 {
  font-size: 1.5rem;
}

h6.the-credential {
  font-size: 0.95rem;
  color: var(--cc-primary);
}

.communication p {
  font-size: 1rem;
}

.instructor-similar-courses {
  margin-top: 100px;
}

/*  ************************************************************************************
  Instructor profile
****************************************************************************************/

#login-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right,
    var(--cc-white-sugar) 400px,
    var(--cc-bg-primary-lighter) 700px,
    var(--cc-white-sugar)
  );
}

form {
  border: 2px solid var(--cc-bg-primary-lighter);
  border-radius: 5px;
  background-color: var(--cc-white-sugar);
}

p.lost {
  color: var(--cc-distinct-dark);
  font-size: 0.85rem;
}
/* ... */

